fixed typo in html, changed function name

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Hygiene Prediction from Yelp Reviews</title>
-<h2>Uploade Yelp Reviews</h2>
+<h2>Upload Yelp Reviews</h2>
 <p>
 	{% with messages = get_flashed_messages() %}
 	  {% if messages %}
